--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,24 @@
-.App {
+.table {
+  border: 1px solid black;
+  margin: auto;
+  margin-top: 5%;
+  background-color: aqua;
+  height: 40vh;
+  width: 60vw;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.data {
+  border: 1px solid black;
+  padding: 1%;
+  margin: 25%;
+  width: 10%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.activeData {
+  border: 1px solid black;
+  padding: 1%;
+  margin: 25%;
+  width: 10%;
+  background-color: aquamarine;
 }
